# dwarf-cli

./: .gitignore  Cargo.toml  README.md  install.sh  setup.sh
src/: checker.rs  main.rs  model.rs
