[workspace]

[package]
name = "dwarf"
version = "0.1.0"
edition = "2021"
description = "A tiny shell assistant powered by Dwarf-15M"
license = "Apache-2.0"

[dependencies]
# ML inference
candle-core = "0.8"
candle-nn = "0.8"
safetensors = "0.4"
tokenizers = "0.21"
ratatui = "0.28"
crossterm = "0.28"

# CLI
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utils
anyhow = "1"
hf-hub = "0.3"

[profile.release]
opt-level = 3
lto = true
strip = true

